--- a/Blog-HW-02/styles/style.scss
+++ b/Blog-HW-02/styles/style.scss
@@ -33,6 +33,7 @@
     text-align: center;
     padding: 6px 0px 5px 0px;
     .section-title{
+        font-size: 38px;
         text-align: center;
     }
 }
